--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT=5000
 MONGO_URI=your_mongodb_connection_string
 JWT_SECRET=your_jwt_secret
-EMAIL_USER=your_gmail_email
-EMAIL_PASS=your_gmail_app_password
+
+EMAIL_USER=learnplus2025@gmail.com
+EMAIL_PASS=fehm obfs hazc zjih
