--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=your_mongodb_connection_string
+MONGO_URI=mongodb+srv://avishkarodrigo725:avishka2000*@cluster0.uxa6yxv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret
 
 EMAIL_USER=learnplus2025@gmail.com
