--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
+
+ACCESS_TOKEN_SECRET = avishka2025
 PORT=5000
-MONGO_URI=mongodb+srv://avishkarodrigo725:avishka2000*@cluster0.uxa6yxv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL=mongodb+srv://avishkarodrigo725:lms25@cluster0.wrlw4uq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
